--- a/flipClock/src/renderer/src/assets/global.css
+++ b/flipClock/src/renderer/src/assets/global.css
@@ -1,6 +1,13 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   width: 100vw;
   height: 100vh;
+  overflow: hidden;
 }
 
 .drag {
@@ -13,4 +20,15 @@ body {
 
 #app {
   padding: 5px;
+}
+
+.el-popper.is-customized {
+  /* Set padding to ensure the height is 32px */
+  padding: 6px 12px;
+  background: linear-gradient(90deg, #9fe597, #cce581);
+}
+
+.el-popper.is-customized .el-popper__arrow::before {
+  background: linear-gradient(45deg, #b2e68d, #bce689);
+  right: 0;
 }
