--- a/flipClock/src/renderer/src/assets/global.scss
+++ b/flipClock/src/renderer/src/assets/global.scss
@@ -18,3 +18,13 @@ body{
 #app{
     padding: 5px;
 }
+.el-popper.is-customized {
+    /* Set padding to ensure the height is 32px */
+    padding: 6px 12px;
+    background: linear-gradient(90deg, rgb(159, 229, 151), rgb(204, 229, 129));
+  }
+  
+  .el-popper.is-customized .el-popper__arrow::before {
+    background: linear-gradient(45deg, #b2e68d, #bce689);
+    right: 0;
+  }
